# Sokoban

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Testing.docx  main.cpp
SDLsrc/: main.cpp  shader.cpp  shader.hpp  test.cpp
SDLsrc/shaders/: fragment.glsl  vertex.glsl
SokoBanSDL3/: CMakeLists.txt  hello.c  hello.cpp
artAssets/: Testing.docx
pre/: CombatSystem.cpp  ExplorationSystem.cpp  FarmingSystem.cpp  components.hpp  gameWindow.h  gmWindow.cpp  others.cpp
sokoFold/: CMakeLists.txt  sokoFold.cpp
sokoFold/include/: components.h  manyfold.h  sokoFold_audiosystem.h  sokoFold_renderer.h  sokoFold_texture.h  texture.h
sokoFold/src/: renderer.cpp  texture.cpp
src/: game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  texture.cpp
